--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "prettus/l5-repository": "^2.6",
+        "themsaid/laravel-mail-preview": "^1.2",
         "venturecraft/revisionable": "^1.28"
     },
     "require-dev": {
